---
config:
  theme: redux
---
classDiagram
    class SparkManager {
        -express app
        -Logger logger
        -Map~string, RegisteredAgent~ agents
        -Configuration defaultConfiguration
        -number port
        +constructor(port)
        +start() Promise~void~
        -setupMiddleware() void
        -setupRoutes() void
        -startAgentCleanup() void
    }

    class RegisteredAgent {
        <<interface>>
        +string id
        +number lastSeen
        +AgentStatus status
        +Configuration configuration
    }

    class AgentStatus {
	    +string id
	    +string status
	    +LinkType selectedLink
	    +SchedulerMode schedulerMode
	    +number messagesInQueue
	    +LinkQuality[] linkQualities
	    +number timestamp
    }

    class Configuration {
	    +SchedulerMode schedulerMode
	    +LinkType selectedLink
	    +number intervalMs
	    +number maxRetries
	    +string sparkProxyUrl
	    +string token
    }

    SparkManager ..> RegisteredAgent : uses
    SparkManager ..> Configuration : uses
    SparkManager ..> AgentStatus : uses